spacing fix

--- a/scss/components/_add-new.scss
+++ b/scss/components/_add-new.scss
@@ -1,6 +1,6 @@
 
 .add-form {
-  padding: 0 15px 30px 15px;
+  padding: 0 15px 25px 15px;
 }
 
 input[type=text] {
