--- a/scss/components/_scale.scss
+++ b/scss/components/_scale.scss
@@ -1,5 +1,5 @@
 .scale-wrap {
-  padding: 0 15px 15px 15px;
+  padding: 0 15px 25px 15px;
   display: flex;
   align-items: center;
   
